# Koditor

./: CMakeLists.txt  README.md  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  qonsole.cpp  qonsole.h  rc.qrc
